Fix icon spacing, make embed clickable
In Figma, element position points begin at the
center of the element, so one must remove
half the content of two elements when calculating
space between the two based on position.

So I did this for a pixel perfect calculation :)

I also made the embed clickable. By default,
embeds make parent anchors ignore click events
for some reason. I'll need to do more research
into why this is the case.

--- a/isolated static ui/css/base-components.css
+++ b/isolated static ui/css/base-components.css
@@ -1,24 +1,18 @@
-
-
 .btn {
     border: none;
     background: none;
-    /* inherit from body */
+    /* inherit from body (or from parent if it overrides its inherited font-family) */
     font-family: inherit;
     cursor: pointer;
 }
 
 .icon {
-    width: 5rem;
+    width: 2rem;
     aspect-ratio: 1/1;
 }
 
-.icon--facebook-fill {
-    
-}
-
-/* todo */
-.icon--instagram-fill {
-    /* mask: radial-gradient(203.57% 116.33% at 75% 15.63%, #FF00B3 0%, #833AB4 26.1%, #FD1D1D 67%, #FD7227 75.1%, #FCB045 100%); */
-    background: none;
+.icon--instagram {
+    /* This will allow clicks to be ignored by the <embed> so that the anchor link works correctly. */
+    /* todo: understand why clicks are captured by <embed> but ignored by parent <a> */
+    pointer-events: none;
 }
