--- a/isolated static ui/css/base-overrides.css
+++ b/isolated static ui/css/base-overrides.css
@@ -100,6 +100,7 @@ Header navbar
         & .navbar__link {
             color: #FD8899;
             font-size: 1.6rem;
+            font-family: "Arima";
    
             font-weight: 600;
             
