--- a/isolated static ui/css/utilities.css
+++ b/isolated static ui/css/utilities.css
@@ -34,6 +34,10 @@
     width: 40rem;
 }
 
+.h-30rem {
+    height: 30rem;
+}
+
 
 /* Spacing utilities */
 
@@ -63,6 +67,10 @@
     flex-direction: column;
 }
 
+.align-center {
+    align-items: center;
+}
+
 .justify-space-between {
     justify-content: space-between;
 }
@@ -73,4 +81,8 @@
 
 .justify-center {
     justify-content: center;
+}
+
+.g-075 {
+    gap: 0.75rem;
 }
